maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:15: error: 'while' expected but '}' found.
 } while (!estSurBiscuit())
 ^Escaper:15: error: ';' expected but 'while' found.
 } while (!estSurBiscuit())
   ^Escaper:21: error: Unmatched closing brace '}' ignored here
}
^